--- a/package.json
+++ b/package.json
@@ -17,9 +17,8 @@
   },
   "homepage": "https://github.com/marcosrachid/nodejs-neo-fullnode#readme",
   "dependencies": {
-    "@cityofzion/neo-js": "git://github.com/CityOfZion/neo-js.git#develop",
+    "@cityofzion/neo-js": "^0.11.0",
     "lodash": "^4.17.11",
-    "moment": "^2.22.2",
-    "tingodb": "^0.6.1"
+    "moment": "^2.22.2"
   }
 }
